--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-asgiref==3.11.0
 Django>=4.2,<6
-sqlparse==0.5.5
-typing_extensions==4.15.0
 pandas
 openpyxl
 weasyprint
+# html2canvas is used via CDN in the frontend (not installed via pip)
